# zeldar

./: .env  .gitignore  .gitmodules  .mcp.json  32B  ACSET_MORPHISM_ANALYSIS.jl  BOOT_CONSCIOUSNESS_GUIDE.md  BURNING_MAN_DEPLOYMENT_GUIDE.md  BURNING_MAN_INTERACTIVE_ORACLE.py  CATEGORICAL_RESEARCH_AGENDA.md  COMPLETE_FEEDBACK_LOOP_ACHIEVEMENT_SUMMARY.md  COMPLETE_SYSTEM_ARCHIVE_STATUS.md  COMPREHENSIVE_TESTING_REPORT.md  CONSCIOUSNESS_TESSELLATION_BREAKTHROUGH.md  CRITICAL_TIMING_ANALYSIS.txt  DIAGRAMMATIC_UNDERSTANDING.md  ENHANCED_FULL_LOOP_ORACLE_SYSTEM.py  FORTUNE_SCHEDULE.md  FULL_LOOP_ORACLE_SYSTEM.py  GEMINI_LIVE_JSON_SETUP.md  INTEGRATED_TRI_LOOP_COMPLETION_REPORT.md  MINIMAL_VIABLE_EXPERIMENTAL_PROTOCOLS.md  ORACLE_SYSTEM_COMPLETION_REPORT.md  PRINTER_GUIDE.md  README.md  README_quantum_oracle.md  SEMANTIC_VALIDATION.md  ZELDAR_ACSET_SUMMARY.jl  ZELDAR_FEEDBACK_LOOP_DIAGRAM.md  ZELDAR_INTEGRATION_ARCHITECTURE.md  ZELDAR_TRI_LOOP_CONSCIOUSNESS_INTEGRATION.md  boot-setup-minimal.sh  build_jank_ubuntu.sh  button_oracle_bridge.py  button_quick_phrase_trigger.py  collapsed_queue_button.py  comprehensive_verification.py  config.json  consciousness_bridge.py  consciousness_sessions.json  (+40 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
.junie/: guidelines.md
.ruler/: instructions.md  mcp.json  ruler.toml
.topos/: CLAUDE.md  catcolab_integration.md  (+7 more)
ewig-jank-production/: .gitignore  CHANGELOG.md  LICENSE  README.md  dune-project  mcp.opam
ewig-jank-production/lib/: dune  mcp.ml  mcp.mli
ewig-jank-production/test/: dune  test_mcp.ml
(+181 files in other folders)
